Language version related migrations